modificações no css

--- a/index.html
+++ b/index.html
@@ -2,64 +2,72 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfólio de David Sousa</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/responsive.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Portfólio de David Sousa</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/header.css">
+  <link rel="stylesheet" href="css/sections.css">
+  <link rel="stylesheet" href="css/responsive.css">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 
 <body>
-    <header>
-        <div class="container">
-            <h1>David Sousa</h1>
-            <p>Programador Web Full Stack</p>
-        </div>
-    </header>
+  <header class="full-page about-me">
+    <section class="container">
+      <span><img src="/assets/photos/ws_Guy_Fawkes_Mask_Code_1600x1200.jpg" alt="minha foto"></span>
+      <h1>David Sousa</h1>
+      <p>Programador Web Full Stack</p>
+    </section>
 
-    <div class="container text-light">
-        <section>
-            <h2>Sobre Mim</h2>
-            <p>Olá! Sou David Sousa, um programador apaixonado por criar soluções web inovadoras. Minha experiência inclui o uso de HTML, CSS, JavaScript, Node.js, Electron e Python para automação.</p>
-        </section>
+    <section>
+      <h2>Sobre Mim</h2>
+      <p>Olá! Sou David Sousa, um programador interessado em criar soluções web inovadoras. Sou desenvolvedor Full Stack em formação acadêmica e com experiência em projetos da área. Possuo habilidades abrangentes em HTML, CSS, JavaScript, Node.js, Electron e Python para automação.</p>
+    </section>
+  </header>
 
-        <section>
-          <h2>Projetos</h2>
-          <div class="container container-itens">
-            <div class="skill-item">
-              <h5 class="card-title">Projeto 1</h5>
-              <p class="card-text">Descrição do projeto 1.</p>
-          </div>
-          <div class="skill-item">
-              <h5 class="card-title">Projeto 2</h5>
-              <p class="card-text">Descrição do projeto 2.</p>
-          </div>
-          <div class="skill-item">
-              <h5 class="card-title">Projeto 3</h5>
-              <p class="card-text">Descrição do projeto 3.</p>
-          </div>
-          </div>
-      </section>
-      
-      <section>
-          <h2>Habilidades</h2>
-          <div class="container container-itens">
-            <div class="skill-item">HTML</div>
-            <div class="skill-item">CSS</div>
-            <div class="skill-item">JavaScript</div>
-            <div class="skill-item">Node.js</div>
-            <div class="skill-item">Electron</div>
-            <div class="skill-item">Python</div>
-          </div>
-      </section>
-    </div>
+  <div class="container text-light">
+    <section class="full-page skills">
+      <h2>Habilidades</h2>
+      <div class="container container-itens">
+        <div class="skill-item">HTML</div>
+        <div class="skill-item">CSS</div>
+        <div class="skill-item">JavaScript</div>
+        <div class="skill-item">Node.js</div>
+        <div class="skill-item">Electron</div>
+        <div class="skill-item">Python</div>
+      </div>
+    </section>
 
-    <footer class="text-center text-light">
-        <p>Entre em contato: davidlsousa.dev@gmail.com</p>
-    </footer>
+    <section class="full-page projects">
+      <h2>Projetos</h2>
+      <div class="container container-itens">
+        <div class="skill-item">
+          <h5 class="card-title">Projeto 1</h5>
+          <p class="card-text">Descrição do projeto 1.</p>
+      </div>
+      <div class="skill-item">
+          <h5 class="card-title">Projeto 2</h5>
+          <p class="card-text">Descrição do projeto 2.</p>
+      </div>
+      <div class="skill-item">
+          <h5 class="card-title">Projeto 3</h5>
+          <p class="card-text">Descrição do projeto 3.</p>
+      </div>
+      </div>
+  </section>
+  </div>
 
-    <script src="js/script.js"></script>
+  <footer class="text-center text-light">
+      <p>Entre em contato: <a href="#">davidlsousa.dev@gmail.com</a></p>
+  </footer>
+
+  <script src="js/script.js"></script>
 </body>
 
 </html>
