ajustando responsividade do CSS

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <header class="full-page about-me">
     <section class="container">
       <span><img src="/assets/photos/ws_Guy_Fawkes_Mask_Code_1600x1200.jpg" alt="minha foto"></span>
-      <h1>David Sousa</h1>
+      <h1 class="font-weight-bold">David Sousa</h1>
       <p>Programador Web Full Stack</p>
     </section>
 
