alterações do css

--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfólio de David Sousa</title>
+
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/sections.css">
   <link rel="stylesheet" href="css/responsive.css">
+  
+    <script defer src="js/script.js"></script>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -66,8 +69,6 @@
   <footer class="text-center text-light">
       <p>Entre em contato: <a href="#">davidlsousa.dev@gmail.com</a></p>
   </footer>
-
-  <script src="js/script.js"></script>
 </body>
 
 </html>
