Add arquivos do  projeto calculadora ao portifólio

--- a/index.html
+++ b/index.html
@@ -51,17 +51,19 @@
       <h2>Projetos</h2>
       <div class="container container-itens">
         <div class="skill-item">
-          <h5 class="card-title">Projeto 1</h5>
+          <a href="./javascript_study/calculadora/index.html" target="_blank">
+            <h5 class="card-title">Calculadora</h5>
+          </a>
           <p class="card-text">Descrição do projeto 1.</p>
-      </div>
+        </div>
       <div class="skill-item">
           <h5 class="card-title">Projeto 2</h5>
           <p class="card-text">Descrição do projeto 2.</p>
-      </div>
+        </div>
       <div class="skill-item">
           <h5 class="card-title">Projeto 3</h5>
           <p class="card-text">Descrição do projeto 3.</p>
-      </div>
+        </div>
       </div>
   </section>
   </div>
