--- a/index.html
+++ b/index.html
@@ -51,15 +51,21 @@
       <h2>Projetos</h2>
       <div class="container container-itens">
         <div class="skill-item">
-          <h5 class="card-title">Projeto 1</h5>
+          <a href="#" class="text-decoration-none">
+            <h5 class="card-title">Projeto 1</h5>
+          </a>
           <p class="card-text">Descrição do projeto 1.</p>
       </div>
       <div class="skill-item">
-          <h5 class="card-title">Projeto 2</h5>
+          <a href="#" class="text-decoration-none">
+            <h5 class="card-title">Projeto 2</h5>
+          </a>
           <p class="card-text">Descrição do projeto 2.</p>
       </div>
       <div class="skill-item">
-          <h5 class="card-title">Projeto 3</h5>
+          <a href="#" class="text-decoration-none">
+            <h5 class="card-title">Projeto 3</h5>
+          </a>
           <p class="card-text">Descrição do projeto 3.</p>
       </div>
       </div>
@@ -67,7 +73,11 @@
   </div>
 
   <footer class="text-center text-light">
-      <p>Entre em contato: <a href="#">davidlsousa.dev@gmail.com</a></p>
+      <p>Entre em contato: 
+        <a href="#" class="text-decoration-none">
+          davidlsousa.dev@gmail.com
+        </a>
+      </p>
   </footer>
 </body>
 
