add link de projetos projetos

--- a/index.html
+++ b/index.html
@@ -38,41 +38,53 @@
     <section class="full-page skills">
       <h2>Habilidades</h2>
       <div class="container container-itens">
-        <div class="skill-item">HTML</div>
-        <div class="skill-item">CSS</div>
-        <div class="skill-item">JavaScript</div>
-        <div class="skill-item">Node.js</div>
-        <div class="skill-item">Electron</div>
-        <div class="skill-item">Python</div>
+        <a href="#" class="text-decoration-none text-white">
+          <div class="skill-item">HTML</div>
+        </a>
+        <a href="#" class="text-decoration-none text-white">
+          <div class="skill-item">CSS</div>
+        </a>
+        <a href="#" class="text-decoration-none text-white">
+          <div class="skill-item">JavaScript</div>
+        </a>
+        <a href="#" class="text-decoration-none text-white">
+          <div class="skill-item">Node.js</div>
+        </a>
+        <a href="#" class="text-decoration-none text-white">
+          <div class="skill-item">Electron</div>
+        </a>
+        <a href="#" class="text-decoration-none text-white">
+          <div class="skill-item">Python</div>
+        </a>
       </div>
     </section>
 
     <section class="full-page projects">
       <h2>Projetos</h2>
       <div class="container container-itens">
-        <div class="skill-item">
-          <a href="#" class="text-decoration-none">
-            <h5 class="card-title">Projeto 1</h5>
-          </a>
-          <p class="card-text">Descrição do projeto 1.</p>
-        </div>
-        <div class="skill-item">
-          <a href="#" class="text-decoration-none">
-            <h5 class="card-title">Projeto 2</h5>
-          </a>
-          <p class="card-text">Descrição do projeto 2.</p>
-        </div>
-        <div class="skill-item">
-          <a href="#" class="text-decoration-none">
-            <h5 class="card-title">Projeto 3</h5>
-          </a>
-          <p class="card-text">Descrição do projeto 3.</p>
-        </div>
+        <a href="https://calculadora-davidlsousa.netlify.app" class="text-decoration-none text-white">
+          <div class="skill-item">
+            <h5 class="card-title">Calculadora</h5>
+            <p class="card-text">Descrição do projeto 1.</p>
+          </div>
+        </a>
+        <a href="https://todo-list-davidlsousa.netlify.app" class="text-decoration-none text-white">
+          <div class="skill-item">
+            <h5 class="card-title">Todo List</h5>
+            <p class="card-text">Descrição do projeto 2.</p>
+          </div>
+        </a>
+        <a href="#" class="text-decoration-none text-white">
+          <div class="skill-item">
+            <h5 class="card-title">Weather App</h5>
+            <p class="card-text">Descrição do projeto 3.</p>
+          </div>
+        </a>
       </div>
   </section>
   </div>
 
-  <footer class="text-center text-light">
+  <footer class="text-center text-light ">
       <p>Entre em contato: 
         <a href="#" class="text-decoration-none">
           davidlsousa.dev@gmail.com
