--- a/index.html
+++ b/index.html
@@ -77,6 +77,12 @@
             <p class="card-text">Um meio de não esquecer o que tem pra fazer...</p>
           </div>
         </a>
+        <a href="https://todo-list-davidlsousa.netlify.app" class="text-decoration-none text-white">
+          <div class="skill-item">
+            <h5 class="card-title">CPF Validator</h5>
+            <p class="card-text">Já precisou verificar se o CPF de alguém está correto?</p>
+          </div>
+        </a>
         <a href="#" class="text-decoration-none text-white">
           <div class="skill-item">
             <h5 class="card-title">Weather App</h5>
