Colocando o link certo para o validador de cpf

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <p class="card-text">Um meio de não esquecer o que tem pra fazer...</p>
           </div>
         </a>
-        <a href="https://todo-list-davidlsousa.netlify.app" class="text-decoration-none text-white">
+        <a href="https://cpf-validator-davidlsousa.netlify.app" class="text-decoration-none text-white">
           <div class="skill-item">
             <h5 class="card-title">CPF Validator</h5>
             <p class="card-text">Já precisou verificar se o CPF de alguém está correto?</p>
