modifying weather app link

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <p class="card-text">Já precisou verificar se o CPF de alguém está correto?</p>
           </div>
         </a>
-        <a href="https://github.com/DavidLSousa/javascript_study/tree/master/weather-app" target="_blank" class="text-decoration-none text-white">
+        <a href="https://weather-app-davidlsousa.netlify.app/" target="_blank" class="text-decoration-none text-white">
           <div class="skill-item">
             <h5 class="card-title">Weather App</h5>
             <p class="card-text">Será que vai chover?</p>
