trocando foto de perfil

--- a/index.html
+++ b/index.html
@@ -26,42 +26,18 @@
 <body>
   <header class="full-page about-me">
     <section class="container">
-      <span><img src="/assets/photos/ws_Guy_Fawkes_Mask_Code_1600x1200.jpg" alt="minha foto"></span>
+      <span><img class="img-cover" src="/assets/photos/ft.jpg" alt="minha foto"></span>
       <h1 class="font-weight-bold">David Sousa</h1>
       <p>Programador Web Full Stack</p>
     </section>
 
     <section>
       <h2>Sobre Mim</h2>
-      <p>Olá! Sou David Sousa, um programador interessado em criar soluções web inovadoras. Sou desenvolvedor Full Stack em formação acadêmica e com experiência em projetos da área. Possuo habilidades abrangentes em HTML, CSS, JavaScript, Node.js, Electron e Python para automação.</p>
+      <p>Olá! Sou David Sousa, um programador interessado em criar soluções web inovadoras. Sou desenvolvedor Full Stack em formação acadêmica e com experiência em projetos da área. Possuo habilidades abrangentes em HTML, CSS, JavaScript, Node.js, Electron.</p>
     </section>
   </header>
 
   <div class="container text-light">
-    <section class="full-page skills">
-      <h2>Habilidades</h2>
-      <div class="container container-itens">
-        <a href="#" class="text-decoration-none text-white">
-          <div class="skill-item">HTML</div>
-        </a>
-        <a href="#" class="text-decoration-none text-white">
-          <div class="skill-item">CSS</div>
-        </a>
-        <a href="#" class="text-decoration-none text-white">
-          <div class="skill-item">JavaScript</div>
-        </a>
-        <a href="#" class="text-decoration-none text-white">
-          <div class="skill-item">Node.js</div>
-        </a>
-        <a href="#" class="text-decoration-none text-white">
-          <div class="skill-item">Electron</div>
-        </a>
-        <a href="#" class="text-decoration-none text-white">
-          <div class="skill-item">Python</div>
-        </a>
-      </div>
-    </section>
-
     <section class="full-page projects">
       <h2>Projetos</h2>
       <div class="container container-itens">
@@ -88,6 +64,27 @@
             <h5 class="card-title">Weather App</h5>
             <p class="card-text">Será que vai chover?</p>
           </div>
+        </a>
+      </div>
+    </section>
+
+    <section class="full-page skills">
+      <h2>Habilidades</h2>
+      <div class="container container-itens">
+        <a href="https://github.com/DavidLSousa" class="text-decoration-none text-white">
+          <div class="skill-item">HTML e CSS</div>
+        </a>
+        <a href="https://github.com/DavidLSousa" class="text-decoration-none text-white">
+          <div class="skill-item">JavaScript</div>
+        </a>
+        <a href="https://github.com/DavidLSousa" class="text-decoration-none text-white">
+          <div class="skill-item">TypeScript</div>
+        </a>
+        <a href="https://github.com/DavidLSousa" class="text-decoration-none text-white">
+          <div class="skill-item">Node.js</div>
+        </a>
+        <a href="https://github.com/DavidLSousa" class="text-decoration-none text-white">
+          <div class="skill-item">Electron</div>
         </a>
       </div>
     </section>
@@ -126,13 +123,6 @@
     </div>
   </div>
 
-  <!-- <footer class="text-center text-light ">
-      <p>Entre em contato: 
-        <a href="pages/popup-form-email.html" class="text-decoration-none link-form-email">
-          davidlsousa.dev@gmail.com
-        </a>
-      </p>
-  </footer> -->
   <footer class="text-center text-light ">
     <p>Entre em contato: 
       <span class="link-form-email">davidlsousa.dev@gmail.com</span>
@@ -141,3 +131,8 @@
 </body>
 
 </html>
+
+<!-- 
+Linkedin: www.linkedin.com/in/davidlsousadev
+GitHub: https://github.com/DavidLSousa
+-->
