retirando projetos inuteis

--- a/index.html
+++ b/index.html
@@ -42,46 +42,58 @@
     <div class="container mx-auto p-8">
         <section class="text-center mb-16">
             <h2 class="text-4xl mb-4">Sobre Mim</h2>
-            <p class="text-lg">Olá! Sou David Sousa, um programador interessado em criar soluções web inovadoras. Sou
+            <!-- <p class="text-lg">Olá! Sou David Sousa, um programador interessado em criar soluções web inovadoras. Sou
                 desenvolvedor Full Stack em formação acadêmica e com experiência em projetos da área. Possuo habilidades
-                abrangentes em HTML, CSS, JavaScript, Node.js, Electron.</p>
+                abrangentes em HTML, CSS, JavaScript, Node.js, Electron.</p> -->
+            <p class="text-lg">
+                Olá! Sou David Sousa, programador com foco em segurança cibernética, com excelente 
+                habilidade de comunicação. Minha compreensão tanto da programação quanto da segurança permite 
+                desenvolver softwares que asseguram a proteção dedados e mitigam riscos em ambientes digitais dinâmicos.
+            </p>
         </section>
 
         <section class="text-center mb-16">
             <h2 class="text-4xl mb-8">Projetos</h2>
             <div class="grid grid-cols-1 gap-4 md:grid-cols-3">
+
                 <a href="https://github.com/DavidLSousa/app_investment"
                     class="bg-gray-800 p-4 rounded hover:bg-gray-600 transition">
                     <h5 class="text-xl font-bold mb-2">App Investment</h5>
                     <p class="text-gray-400">App para gerenciar ativos de investimento com Jinja2, TailwindCSS, e Flask com Peewee e MySQL. 
                         Usando containerizado com Docker e os testes com Pytest.</p>
                 </a>
+
                 <a href="https://github.com/DavidLSousa/theflashcards"
                     class="bg-gray-800 p-4 rounded hover:bg-gray-600 transition">
                     <h5 class="text-xl font-bold mb-2">The Flash Cards</h5>
                     <p class="text-gray-400">App para criar cartões de pergunta e resposta.
                         Feito em .NET MAUI, para Android e Windows.</p>
                 </a>
-                <a href="https://calculadora-davidlsousa.netlify.app"
+
+                <!-- <a href="https://calculadora-davidlsousa.netlify.app"
                     class="bg-gray-800 p-4 rounded hover:bg-gray-600 transition">
                     <h5 class="text-xl font-bold mb-2">Calculadora</h5>
                     <p class="text-gray-400">Tentativa de algo simples porem funcional!</p>
-                </a>
-                <a href="https://todo-list-davidlsousa.netlify.app"
+                </a> -->
+
+                <!-- <a href="https://todo-list-davidlsousa.netlify.app"
                     class="bg-gray-800 p-4 rounded hover:bg-gray-600 transition">
                     <h5 class="text-xl font-bold mb-2">Todo List</h5>
                     <p class="text-gray-400">Um meio de não esquecer o que tem pra fazer...</p>
-                </a>
-                <a href="https://cpf-validator-davidlsousa.netlify.app"
+                </a> -->
+
+                <!-- <a href="https://cpf-validator-davidlsousa.netlify.app"
                     class="bg-gray-800 p-4 rounded hover:bg-gray-600 transition">
                     <h5 class="text-xl font-bold mb-2">CPF Validator</h5>
                     <p class="text-gray-400">Já precisou verificar se o CPF de alguém está correto?</p>
-                </a>
+                </a> -->
+
                 <a href="https://weather-app-davidlsousa.netlify.app/" target="_blank"
                     class="bg-gray-800 p-4 rounded hover:bg-gray-600 transition">
                     <h5 class="text-xl font-bold mb-2">Weather App</h5>
                     <p class="text-gray-400">Será que vai chover?</p>
                 </a>
+
             </div>
         </section>
 
@@ -94,6 +106,8 @@
                     class="bg-gray-800 p-4 rounded hover:bg-gray-600 transition">JavaScript e TypeScript</a>
                 <a href="https://github.com/DavidLSousa"
                     class="bg-gray-800 p-4 rounded hover:bg-gray-600 transition">Node.js</a>
+                <a href="https://github.com/DavidLSousa"
+                    class="bg-gray-800 p-4 rounded hover:bg-gray-600 transition">Python</a>
                 <a href="https://github.com/DavidLSousa" class="bg-gray-800 p-4 rounded hover:bg-gray-600 transition">C#
                     .NET</a>
                 <a href="https://github.com/DavidLSousa"
